--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 body {
     font-family: sans-serif;
     line-height: 1.4;
+    color: white;
 }
 
 p {
     font-size: 1.125rem;
+    color: white;
+}
+
+h1 {
+    color: rgba(27, 27, 50, 0.8);
 }
 
 select {
@@ -15,13 +21,15 @@ select {
     padding: 0 0.625rem;
     margin-bottom: 1.875rem;
     text-align: center;
+    color: rgba(27, 27, 50, 0.8);
 }
 
 .form-group {
     display: flex;
     flex-direction: column;
-    padding: 0.375rem 0.75rem;
+    padding: 0.25rem;
     border-radius: 0.25rem;
+    margin: 0 auto 1.25rem auto;
 }
 
 .form-control {
@@ -39,6 +47,16 @@ select {
     min-width: 1.25rem;
 }
 
+.submit-button {
+    display: block;
+    width: 100%;
+    padding: 0.55rem;
+    border-radius: 0.25rem;
+    background: green;
+    border: none;
+    cursor: pointer;
+}
+
 #main {
  width: 70%;
  margin: 0 auto 1.25rem auto;
@@ -54,4 +72,12 @@ select {
     flex-direction: row;
 }
 
+#survey-form {
+    background-color: rgba(27, 27, 50, 0.8);
+    border-radius: 0.25rem;
+    padding: 1.5rem 0.625rem;
+}
 
+#description {
+    color: rgba(27, 27, 50, 0.8);
+}
